--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,14 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+        <label for="name" class="popup__label">
+          <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" id="name" minlength="2" pattern="[a-zA-Zа-яёА-ЯЁ\s\-]*" data-invalid-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" maxlength="40" required>
+          <div class="popup__error name-error"></div>
+        </label>
+        <label for="description" class="popup__label">
+          <input type="text" name="description" id="description" class="popup__input popup__input_type_description" minlength="2" maxlength="200" placeholder="Занятие" required>
+          <div class="popup__error description-error"></div>
+        </label>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -48,8 +54,14 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <label for="place-name">
+          <input type="text" id="place-name-input" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
+          <div class="popup__error place-name-input-error"></div>
+        </label>
+        <label for="link-input">
+          <input type="url" id="link-input" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+          <div class="popup__error link-input-error"></div>
+        </label>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -69,7 +81,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
-      <button type="button" class="card__like-button"></button>
+      <div class="card__like">
+        <button type="button" class="card__like-button"></button>
+        <div class="card__like-count">0</div>
+      </div>
     </div>
   </li>
 </template>
