--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,19 @@
       </form>
     </div>
   </div>
+  <div class="popup popup_type_avatar popup_is-animated">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="avatar">
+        <label for="link-input">
+          <input type="url" id="avatar-link-input" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на фото" required>
+          <div class="popup__error avatar-link-input-error"></div>
+        </label>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
   <div class="popup popup_type_image popup_is-animated">
     <div class="popup__content popup__content_content_image">
       <button type="button" class="popup__close"></button>
