--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,15 @@
       </form>
     </div>
   </div>
+  <div class="popup popup_type_remove popup_is-animated">
+    <div class="popup__content popup__content_content_remove">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Вы уверены?</h3>
+      <form class="popup__form" name="remove">
+        <button type="submit" class="button popup__button">Да</button>
+      </form>
+    </div>
+  </div>
   <div class="popup popup_type_image popup_is-animated">
     <div class="popup__content popup__content_content_image">
       <button type="button" class="popup__close"></button>
